<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/stackBar"
    android:layout_marginBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:overScrollMode="never"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingTop="7dp"
            android:theme="@style/RobotoTextViewStyle"
            tools:ignore="RtlSymmetry">

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:id="@+id/storyCard1"
                android:layout_height="110dp"
                android:layout_marginEnd="7dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:theme="@style/AppTheme.GreenRipple"
                app:cardCornerRadius="9dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/stackImage1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horizontal_stack"
                    android:tint="#3b000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:id="@+id/stackTitle1"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/stack_text_1"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:layout_marginEnd="7dp"
                android:clickable="true"
                android:id="@+id/storyCard2"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:theme="@style/AppTheme.GreenRipple"
                app:cardCornerRadius="9dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/stackImage2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horizontal_stack"
                    android:tint="#3b000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:id="@+id/stackTitle2"
                    android:text="@string/stack_text_2"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:layout_marginEnd="7dp"
                android:clickable="true"
                android:id="@+id/storyCard3"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:theme="@style/AppTheme.GreenRipple"
                app:cardCornerRadius="9dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/stackImage3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horizontal_stack"
                    android:tint="#3b000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/stackTitle3"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/stack_text_3"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:id="@+id/storyCard4"
                android:layout_marginEnd="7dp"
                android:clickable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:theme="@style/AppTheme.GreenRipple"
                app:cardCornerRadius="9dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/stackImage4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horizontal_stack"
                    android:tint="#3b000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:id="@+id/stackTitle4"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/stack_text_4"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:layout_width="180dp"
                android:layout_height="110dp"
                android:layout_marginEnd="7dp"
                android:clickable="true"
                android:id="@+id/storyCard5"
                android:foreground="?android:attr/selectableItemBackground"
                android:padding="10dp"
                android:theme="@style/AppTheme.GreenRipple"
                app:cardCornerRadius="9dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/stackImage5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/horizontal_stack"
                    android:tint="#3b000000" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:ellipsize="end"
                    android:gravity="bottom"
                    android:id="@+id/stackTitle5"
                    android:padding="4dp"
                    android:text="@string/stack_text_5"
                    android:textAllCaps="true"
                    android:textColor="#fff"
                    android:textSize="14sp"
                    android:textStyle="bold" />

            </android.support.v7.widget.CardView>

        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>